--- a/help.html
+++ b/help.html
@@ -99,9 +99,10 @@
 						<div class="card">
 							<div class="card-header" id="headingOne">
 								<h2 class="clearfix mb-0">
-									<a class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"
-										aria-expanded="true" aria-controls="collapseOne"><i
-											class="fa fa-chevron-circle-down"></i> What is Bootstrap Framework?</a>
+									<a class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+										<i class="fa fa-chevron-circle-down"></i>
+										What is Bootstrap Framework?
+									</a>
 								</h2>
 							</div>
 							<div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
@@ -110,16 +111,17 @@
 									tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper
 									malesuada ante. Vestibulum id metus ac nisl bibendum scelerisque non non purus.
 									Suspendisse
-									varius nibh non aliquet sagittis. In tincidunt orci sit amet elementum vestibulum.</div>
+									varius nibh non aliquet sagittis. In tincidunt orci sit amet elementum vestibulum.
+								</div>
 							</div>
 						</div>
 						<div class="card">
 							<div class="card-header" id="headingTwo">
 								<h2 class="mb-0">
-									<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
-										aria-expanded="false" aria-controls="collapseTwo"><i
-											class="fa fa-chevron-circle-down"></i> How to Create Responsive Website with
-										Bootstrap?</a>
+									<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+										<i class="fa fa-chevron-circle-down"></i>
+										How to Create Responsive Website with Bootstrap?
+									</a>
 								</h2>
 							</div>
 							<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
@@ -128,16 +130,18 @@
 									terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
 									brunch.
 									Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
-									bird on it squid single-origin coffee nulla assumenda shoreditch et.</div>
+									bird on it squid single-origin coffee nulla assumenda shoreditch et.
+								</div>
 							</div>
 						</div>
 						<div class="card">
 							<div class="card-header" id="headingThree">
 								<h2 class="mb-0">
 									<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
-										aria-expanded="false" aria-controls="collapseThree"><i
-											class="fa fa-chevron-circle-down"></i> Does Bootstrap Framework Provide
-										Cross-browser Support?</a>
+										aria-expanded="false" aria-controls="collapseThree">
+										<i class="fa fa-chevron-circle-down"></i>
+										Does Bootstrap Framework Provide Cross-browser Support?
+									</a>
 								</h2>
 							</div>
 							<div id="collapseThree" class="collapse" aria-labelledby="headingThree"
@@ -146,16 +150,17 @@
 									tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper
 									malesuada ante. Vestibulum id metus ac nisl bibendum scelerisque non non purus.
 									Suspendisse
-									varius nibh non aliquet sagittis. In tincidunt orci sit amet elementum vestibulum.</div>
+									varius nibh non aliquet sagittis. In tincidunt orci sit amet elementum vestibulum.
+								</div>
 							</div>
 						</div>
 						<div class="card">
 							<div class="card-header" id="headingFour">
 								<h2 class="mb-0">
-									<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour"
-										aria-expanded="false" aria-controls="collapseFour"><i
-											class="fa fa-chevron-circle-down"></i> Can I Use Bootstrap for Mobile App
-										Development?</a>
+									<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+										<i class="fa fa-chevron-circle-down"></i>
+										Can I Use Bootstrap for Mobile App Development?
+									</a>
 								</h2>
 							</div>
 							<div id="collapseFour" class="collapse" aria-labelledby="headingFour"
@@ -164,7 +169,8 @@
 									terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
 									brunch.
 									Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
-									bird on it squid single-origin coffee nulla assumenda shoreditch et.</div>
+									bird on it squid single-origin coffee nulla assumenda shoreditch et.
+								</div>
 							</div>
 						</div>
 					</div>
