--- a/help.html
+++ b/help.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
 	<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css" />
 	<link href="assets/css/navs/navbar_global.css" rel="stylesheet" type="text/css" />
+	<link href="assets/css/footer/footer.css" rel="stylesheet" type="text/css" />
 	<link href="assets/css/globalstyle.css" rel="stylesheet" type="text/css" />
 	<link href="assets/css/home.css" rel="stylesheet" type="text/css" />
 	<script src="components/bootstrap.bundle.js"></script>
@@ -17,26 +18,28 @@
 
 <body>
 	<!-- Navbar -->
-	<header>
-		<div class="logo">
-			<a href="home.html"><img src="assets/img/lostlogo.png" class="logo" alt="logo" /></a>
-		</div>
-		<div class="hamburger">
-			<div class="line"></div>
-			<div class="line"></div>
-			<div class="line"></div>
-		</div>
-		<nav class="nav-bar">
-			<ul>
-				<li><a href="home.html" class="active">HOME</a></li>
-				<li><a href="" class="active">TEMUKAN BARANG</a></li>
-				<li><a href="about.html" class="active">TENTANG KAMI</a></li>
-				<li><a href="hubungi.html" class="active">HUBUNGI KAMI</a></li>
-				<li><a href="login.html" class="masuk">MASUK</a></li>
-				<li><a href="register.html" class="register">DAFTAR</a></li>
-			</ul>
-		</nav>
-	</header>
+	<div>
+		<header>
+			<div class="logo">
+				<a href="home.html"><img src="assets/img/lostlogo.png" class="logo" alt="logo" /></a>
+			</div>
+			<div class="hamburger">
+				<div class="line"></div>
+				<div class="line"></div>
+				<div class="line"></div>
+			</div>
+			<nav class="nav-bar">
+				<ul>
+					<li><a href="home.html" class="active">HOME</a></li>
+					<li><a href="" class="active">TEMUKAN BARANG</a></li>
+					<li><a href="about.html" class="active">TENTANG KAMI</a></li>
+					<li><a href="hubungi.html" class="active">HUBUNGI KAMI</a></li>
+					<li><a href="login.html" class="masuk">MASUK</a></li>
+					<li><a href="register.html" class="register">DAFTAR</a></li>
+				</ul>
+			</nav>
+		</header>
+	</div>
 	<script src="components/navbar.js"></script>
 	<script src="components/navbar-sticky.js"></script>
 
@@ -51,7 +54,7 @@
 
 					<!-- Quick Help -->
 					<div class="mt-5 container">
-						<div class="row container mt-4 mb-4" style="align-self: center;">
+						<div class="row container mt-4 mb-5" style="align-self: center;">
 							<div class="col-sm-4 container mt-4">
 								<a href="#" style="text-decoration: none;">
 									<img src="assets/img/about/faq.png" alt="" width="300px" class="mx-auto d-block">
@@ -81,95 +84,97 @@
 	</div>
 
 	<!-- Accordions -->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500|Open+Sans">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="assets/css/accordions.css">
-	<script src="components/accordions.js"></script>
-
-	<div id="accordion" class="container" style="padding-left: 70px; padding-right: 70px;">
-		<div class="container-lg">
-			<div class="row">
-				<div class="col-lg-12">
-					<h1 class="page-title">FAQs</h1>
-					<div class="accordion" id="accordionExample">
-						<div class="card">
-							<div class="card-header" id="headingOne">
-								<h2 class="clearfix mb-0">
-									<a class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-										<i class="fa fa-chevron-circle-down"></i>
-										What is Bootstrap Framework?
-									</a>
-								</h2>
-							</div>
-							<div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
-								data-parent="#accordionExample">
-								<div class="card-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem
-									tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper
-									malesuada ante. Vestibulum id metus ac nisl bibendum scelerisque non non purus.
-									Suspendisse
-									varius nibh non aliquet sagittis. In tincidunt orci sit amet elementum vestibulum.
+	<div class="mt-4 mb-2">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500|Open+Sans">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="assets/css/accordions.css">
+		<script src="components/accordions.js"></script>
+	
+		<div id="accordion" class="container" style="padding-left: 70px; padding-right: 70px;">
+			<div class="container-lg mb-5">
+				<div class="row">
+					<div class="col-lg-12">
+						<h1 class="page-title">Tentang Lost&Found</h1>
+						<div class="accordion" id="accordionExample">
+							<div class="card">
+								<div class="card-header" id="headingOne">
+									<h2 class="clearfix mb-0">
+										<a class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+											<i class="fa fa-chevron-circle-down"></i>
+											What is Bootstrap Framework?
+										</a>
+									</h2>
+								</div>
+								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
+									data-parent="#accordionExample">
+									<div class="card-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem
+										tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper
+										malesuada ante. Vestibulum id metus ac nisl bibendum scelerisque non non purus.
+										Suspendisse
+										varius nibh non aliquet sagittis. In tincidunt orci sit amet elementum vestibulum.
+									</div>
 								</div>
 							</div>
-						</div>
-						<div class="card">
-							<div class="card-header" id="headingTwo">
-								<h2 class="mb-0">
-									<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-										<i class="fa fa-chevron-circle-down"></i>
-										How to Create Responsive Website with Bootstrap?
-									</a>
-								</h2>
-							</div>
-							<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-								data-parent="#accordionExample">
-								<div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus
-									terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
-									brunch.
-									Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
-									bird on it squid single-origin coffee nulla assumenda shoreditch et.
+							<div class="card">
+								<div class="card-header" id="headingTwo">
+									<h2 class="mb-0">
+										<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+											<i class="fa fa-chevron-circle-down"></i>
+											How to Create Responsive Website with Bootstrap?
+										</a>
+									</h2>
+								</div>
+								<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+									data-parent="#accordionExample">
+									<div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus
+										terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
+										brunch.
+										Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
+										bird on it squid single-origin coffee nulla assumenda shoreditch et.
+									</div>
 								</div>
 							</div>
-						</div>
-						<div class="card">
-							<div class="card-header" id="headingThree">
-								<h2 class="mb-0">
-									<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
-										aria-expanded="false" aria-controls="collapseThree">
-										<i class="fa fa-chevron-circle-down"></i>
-										Does Bootstrap Framework Provide Cross-browser Support?
-									</a>
-								</h2>
-							</div>
-							<div id="collapseThree" class="collapse" aria-labelledby="headingThree"
-								data-parent="#accordionExample">
-								<div class="card-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem
-									tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper
-									malesuada ante. Vestibulum id metus ac nisl bibendum scelerisque non non purus.
-									Suspendisse
-									varius nibh non aliquet sagittis. In tincidunt orci sit amet elementum vestibulum.
+							<div class="card">
+								<div class="card-header" id="headingThree">
+									<h2 class="mb-0">
+										<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
+											aria-expanded="false" aria-controls="collapseThree">
+											<i class="fa fa-chevron-circle-down"></i>
+											Does Bootstrap Framework Provide Cross-browser Support?
+										</a>
+									</h2>
+								</div>
+								<div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+									data-parent="#accordionExample">
+									<div class="card-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem
+										tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper
+										malesuada ante. Vestibulum id metus ac nisl bibendum scelerisque non non purus.
+										Suspendisse
+										varius nibh non aliquet sagittis. In tincidunt orci sit amet elementum vestibulum.
+									</div>
 								</div>
 							</div>
-						</div>
-						<div class="card">
-							<div class="card-header" id="headingFour">
-								<h2 class="mb-0">
-									<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-										<i class="fa fa-chevron-circle-down"></i>
-										Can I Use Bootstrap for Mobile App Development?
-									</a>
-								</h2>
-							</div>
-							<div id="collapseFour" class="collapse" aria-labelledby="headingFour"
-								data-parent="#accordionExample">
-								<div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus
-									terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
-									brunch.
-									Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
-									bird on it squid single-origin coffee nulla assumenda shoreditch et.
+							<div class="card">
+								<div class="card-header" id="headingFour">
+									<h2 class="mb-0">
+										<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+											<i class="fa fa-chevron-circle-down"></i>
+											Can I Use Bootstrap for Mobile App Development?
+										</a>
+									</h2>
+								</div>
+								<div id="collapseFour" class="collapse" aria-labelledby="headingFour"
+									data-parent="#accordionExample">
+									<div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus
+										terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
+										brunch.
+										Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
+										bird on it squid single-origin coffee nulla assumenda shoreditch et.
+									</div>
 								</div>
 							</div>
 						</div>
@@ -178,6 +183,39 @@
 			</div>
 		</div>
 	</div>
+
+
+	<!--FOOTER-->
+	<footer class="container-footer">
+		<div class="page-one">
+			<div class="box">
+				<figure>
+					<a href="#">
+						<img src="assets/img/footer-logo.png" alt="Lost and found">
+					</a>
+				</figure>
+			</div>
+			<div class="box">
+				<div class="box-center">
+					<a class="">Temukan Barang</a>
+					<a class="">Tentang kami</a>
+					<a class="">Hubungi kami</a>
+				</div>
+			</div>
+			<div class="box">
+				<h2>Ikuti Kami</h2>
+				<div class="social-media">
+					<i class="bi bi-facebook"></i>
+					<i class="bi bi-instagram"></i>
+					<i class="bi bi-twitter"></i>
+					<i class="bi bi-youtube"></i>
+				</div>
+			</div>
+		</div>
+		<div class="page-two">
+			<small>&copy; 2022 <b>LOST AND FOUND</b> - PT. Kerja Kelompok Sukses</small>
+		</div>
+	</footer>
 </body>
 
 </html>
