--- a/help.html
+++ b/help.html
@@ -84,96 +84,102 @@
 	</div>
 
 	<!-- Accordions -->
-	<div class="mt-4 mb-2">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500|Open+Sans">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-		<link rel="stylesheet" href="assets/css/accordions.css">
-		<script src="components/accordions.js"></script>
-	
-		<div id="accordion" class="container" style="padding-left: 70px; padding-right: 70px;">
-			<div class="container-lg mb-5">
-				<div class="row">
-					<div class="col-lg-12">
-						<h1 class="page-title">Tentang Lost&Found</h1>
-						<div class="accordion" id="accordionExample">
-							<div class="card">
-								<div class="card-header" id="headingOne">
-									<h2 class="clearfix mb-0">
-										<a class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											<i class="fa fa-chevron-circle-down"></i>
-											What is Bootstrap Framework?
-										</a>
-									</h2>
-								</div>
-								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
-									data-parent="#accordionExample">
-									<div class="card-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem
-										tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper
-										malesuada ante. Vestibulum id metus ac nisl bibendum scelerisque non non purus.
-										Suspendisse
-										varius nibh non aliquet sagittis. In tincidunt orci sit amet elementum vestibulum.
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500|Open+Sans">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="assets/css/accordions.css">
+	<script src="components/accordions.js"></script>
+
+
+	<div class="row">
+		<!-- Grid Utama -->
+		<div class="col-sm-10">
+			<div class="mt-4 mb-2">
+				<div id="accordion" class="container" style="padding-left: 70px; padding-right: 70px;">
+					<div class="container-lg mb-5">
+						<div class="row">
+							<div class="col-lg-12">
+								<h1 class="page-title">Tentang <span class="head-color">Lost&Found</span></h1>
+								<div class="accordion" id="accordionExample">
+									<div class="card">
+										<div class="card-header" id="headingOne">
+											<h2 class="clearfix mb-0">
+												<a class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+													<i class="fa fa-chevron-circle-down"></i>
+													What is Bootstrap Framework?
+												</a>
+											</h2>
+										</div>
+										<div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
+											data-parent="#accordionExample">
+											<div class="card-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem
+												tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper
+												malesuada ante. Vestibulum id metus ac nisl bibendum scelerisque non non purus.
+												Suspendisse
+												varius nibh non aliquet sagittis. In tincidunt orci sit amet elementum vestibulum.
+											</div>
+										</div>
 									</div>
-								</div>
-							</div>
-							<div class="card">
-								<div class="card-header" id="headingTwo">
-									<h2 class="mb-0">
-										<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-											<i class="fa fa-chevron-circle-down"></i>
-											How to Create Responsive Website with Bootstrap?
-										</a>
-									</h2>
-								</div>
-								<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-									data-parent="#accordionExample">
-									<div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus
-										terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
-										brunch.
-										Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
-										bird on it squid single-origin coffee nulla assumenda shoreditch et.
+									<div class="card">
+										<div class="card-header" id="headingTwo">
+											<h2 class="mb-0">
+												<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+													<i class="fa fa-chevron-circle-down"></i>
+													How to Create Responsive Website with Bootstrap?
+												</a>
+											</h2>
+										</div>
+										<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+											data-parent="#accordionExample">
+											<div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus
+												terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
+												brunch.
+												Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
+												bird on it squid single-origin coffee nulla assumenda shoreditch et.
+											</div>
+										</div>
 									</div>
-								</div>
-							</div>
-							<div class="card">
-								<div class="card-header" id="headingThree">
-									<h2 class="mb-0">
-										<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
-											aria-expanded="false" aria-controls="collapseThree">
-											<i class="fa fa-chevron-circle-down"></i>
-											Does Bootstrap Framework Provide Cross-browser Support?
-										</a>
-									</h2>
-								</div>
-								<div id="collapseThree" class="collapse" aria-labelledby="headingThree"
-									data-parent="#accordionExample">
-									<div class="card-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem
-										tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper
-										malesuada ante. Vestibulum id metus ac nisl bibendum scelerisque non non purus.
-										Suspendisse
-										varius nibh non aliquet sagittis. In tincidunt orci sit amet elementum vestibulum.
+									<div class="card">
+										<div class="card-header" id="headingThree">
+											<h2 class="mb-0">
+												<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
+													aria-expanded="false" aria-controls="collapseThree">
+													<i class="fa fa-chevron-circle-down"></i>
+													Does Bootstrap Framework Provide Cross-browser Support?
+												</a>
+											</h2>
+										</div>
+										<div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+											data-parent="#accordionExample">
+											<div class="card-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem
+												tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper
+												malesuada ante. Vestibulum id metus ac nisl bibendum scelerisque non non purus.
+												Suspendisse
+												varius nibh non aliquet sagittis. In tincidunt orci sit amet elementum vestibulum.
+											</div>
+										</div>
 									</div>
-								</div>
-							</div>
-							<div class="card">
-								<div class="card-header" id="headingFour">
-									<h2 class="mb-0">
-										<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-											<i class="fa fa-chevron-circle-down"></i>
-											Can I Use Bootstrap for Mobile App Development?
-										</a>
-									</h2>
-								</div>
-								<div id="collapseFour" class="collapse" aria-labelledby="headingFour"
-									data-parent="#accordionExample">
-									<div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus
-										terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
-										brunch.
-										Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
-										bird on it squid single-origin coffee nulla assumenda shoreditch et.
+									<div class="card">
+										<div class="card-header" id="headingFour">
+											<h2 class="mb-0">
+												<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+													<i class="fa fa-chevron-circle-down"></i>
+													Can I Use Bootstrap for Mobile App Development?
+												</a>
+											</h2>
+										</div>
+										<div id="collapseFour" class="collapse" aria-labelledby="headingFour"
+											data-parent="#accordionExample">
+											<div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus
+												terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
+												brunch.
+												Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
+												bird on it squid single-origin coffee nulla assumenda shoreditch et.
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -182,7 +188,14 @@
 				</div>
 			</div>
 		</div>
+		<!-- Grid Utama -->
+		<div class="col-sm-2">
+			<div class="">
+				<img src="assets/img/asking.png" alt="Asking" class="img-fluid" style="float: left; margin-top: 12pt;"/>
+			  </div>
+		</div>
 	</div>
+	
 
 
 	<!--FOOTER-->
