--- a/help.html
+++ b/help.html
@@ -96,7 +96,7 @@
 
 	<div class="row">
 		<!-- Grid Utama -->
-		<div class="col-sm-10">
+		<div class="col-sm-9">
 			<div class="mt-4 mb-2">
 				<div id="accordion" class="container" style="padding-left: 70px; padding-right: 70px;">
 					<div class="container-lg mb-5">
@@ -189,10 +189,10 @@
 			</div>
 		</div>
 		<!-- Grid Utama -->
-		<div class="col-sm-2">
-			<div class="">
-				<img src="assets/img/asking.png" alt="Asking" class="img-fluid" style="float: left; margin-top: 12pt;"/>
-			  </div>
+		<div class="col-sm-3">
+			<div class="img-fluid">
+				<img src="assets/img/asking.png" alt="Asking" width="200px" style="margin-top: 60pt;"/>
+			</div>
 		</div>
 	</div>
 	
